--- a/shop/style.css
+++ b/shop/style.css
@@ -1,5 +1,6 @@
 /* header, footer font */
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap");
 
 * {
   margin: 0;
@@ -60,6 +61,96 @@ nav {
 }
 
 /*  main */
+.contaner {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 30px;
+  justify-content: space-around;
+  margin: 80px 0;
+}
+
+.sail {
+  width: 100%;
+  height: 400px;
+  box-shadow: 8px 5px 4px lightgrey;
+}
+
+.sail:hover {
+  transform: scale(1.1);
+}
+
+.off-container {
+  position: relative;
+  text-align: center;
+  font-family: "Afacad Flux", sans-serif;
+}
+
+h4 {
+  font-size: x-large;
+  font-weight: bold;
+}
+
+div.offa > button {
+  width: 130px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: black;
+  color: azure;
+  font-size: larger;
+  font-weight: bold;
+  border: 2px solid goldenrod;
+}
+
+div.offa {
+  position: absolute;
+  top: 80px;
+  left: 400px;
+  color: white;
+  z-index: 50;
+}
+
+div.offb {
+  position: absolute;
+  top: 280px;
+  left: 250px;
+
+  color: white;
+  z-index: 50;
+}
+
+div.offb > button {
+  width: 130px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgba(0, 17, 0, 0.89);
+  color: azure;
+  font-size: larger;
+  font-weight: bold;
+  border: 2px solid white;
+}
+
+div.offc {
+  position: absolute;
+  top: 250px;
+  left: 10px;
+  color: black;
+  z-index: 50;
+  text-align: left;
+}
+
+div.offc > button {
+  width: 130px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+  font-size: larger;
+  font-weight: bold;
+  border: 2px solid black;
+}
 
 /* footer */
 footer {
@@ -67,6 +158,10 @@ footer {
   width: 100%;
   min-height: 400px;
   font-family: "Roboto", sans-serif;
+}
+
+.two-box {
+  gap: 15px;
 }
 
 .foot-container {
