--- a/blog/style.css
+++ b/blog/style.css
@@ -1,5 +1,6 @@
 /* header, footer font */
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
 * {
   margin: 0;
@@ -60,6 +61,68 @@ nav {
 }
 
 /*  main */
+.main-container {
+  font-family: "Nunito", sans-serif;
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0;
+  min-height: 800px;
+}
+
+h2 {
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bold;
+  color: goldenrod;
+  margin-bottom: 30px;
+}
+
+.blog-container {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  flex-wrap: wrap;
+}
+
+h4 {
+  font-size: xx-large;
+}
+
+.card {
+  font-size: x-large;
+  font-weight: bold;
+  width: 500px;
+  height: 700px;
+  border: 2px solid goldenrod;
+  border-radius: 4px;
+  padding: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 10px;
+  box-shadow: 4px 4px 6px 2px darkgrey;
+}
+
+.card button {
+  width: 150px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: goldenrod;
+  color: azure;
+  font-size: large;
+  font-weight: bold;
+  border: none;
+  box-shadow: 4px 4px 6px 2px darkgrey;
+}
+
+.card button:hover {
+  background-color: white;
+  color: goldenrod;
+  border: 2px solid goldenrod;
+}
 
 /* footer */
 footer {
