--- a/home/style.css
+++ b/home/style.css
@@ -1,5 +1,12 @@
 /* header, footer font */
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* about */
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap");
+
+/* shop */
+@import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap");
+/* blog */
+@import url("https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
 * {
   margin: 0;
@@ -59,7 +66,7 @@ nav {
   height: 400px;
 }
 
-/*  main */
+/*  main home */
 
 .article-container {
   display: flex;
@@ -108,6 +115,222 @@ h1 {
 }
 
 .article-container button:hover {
+  background-color: white;
+  color: goldenrod;
+  border: 2px solid goldenrod;
+}
+
+/* about */
+.main-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  min-height: 600px;
+  margin: 80px 30px 30 px 30px;
+}
+
+.pic-container {
+  max-height: 350px;
+}
+
+div.pic {
+  width: 350px;
+  height: 300px;
+  background-color: black;
+  position: relative;
+  left: -100px;
+  top: 50px;
+}
+
+img[alt="about us"] {
+  width: 600px;
+  max-height: 500px;
+  z-index: 20;
+  position: relative;
+  top: -225px;
+  left: -75px;
+}
+
+.main-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-top: 150px;
+  font-family: "Playwrite GB S", cursive;
+}
+
+.main-info button {
+  width: 150px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: goldenrod;
+  color: azure;
+  font-size: larger;
+  font-weight: bold;
+  border: none;
+  box-shadow: 4px 4px 6px 2px darkgrey;
+}
+
+.main-info button:hover {
+  background-color: white;
+  color: goldenrod;
+  border: 2px solid goldenrod;
+}
+
+/* shop */
+.contaner {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 30px;
+  justify-content: space-around;
+  margin: 80px 0;
+}
+
+.sail {
+  width: 100%;
+  height: 400px;
+  box-shadow: 8px 5px 4px lightgrey;
+}
+
+.sail:hover {
+  transform: scale(1.1);
+}
+
+.off-container {
+  position: relative;
+  text-align: center;
+  font-family: "Afacad Flux", sans-serif;
+}
+
+h4 {
+  font-size: x-large;
+  font-weight: bold;
+}
+
+div.offa > button {
+  width: 130px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: black;
+  color: azure;
+  font-size: larger;
+  font-weight: bold;
+  border: 2px solid goldenrod;
+}
+
+div.offa {
+  position: absolute;
+  top: 80px;
+  left: 400px;
+  color: white;
+  z-index: 50;
+}
+
+div.offb {
+  position: absolute;
+  top: 280px;
+  left: 250px;
+
+  color: white;
+  z-index: 50;
+}
+
+div.offb > button {
+  width: 130px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgba(0, 17, 0, 0.89);
+  color: azure;
+  font-size: larger;
+  font-weight: bold;
+  border: 2px solid white;
+}
+
+div.offc {
+  position: absolute;
+  top: 250px;
+  left: 10px;
+  color: black;
+  z-index: 50;
+  text-align: left;
+}
+
+div.offc > button {
+  width: 130px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+  font-size: larger;
+  font-weight: bold;
+  border: 2px solid black;
+}
+
+/* blog */
+.main-container {
+  font-family: "Nunito", sans-serif;
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0;
+  min-height: 800px;
+}
+
+h2 {
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bold;
+  color: goldenrod;
+  margin-bottom: 30px;
+}
+
+.blog-container {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+  flex-wrap: wrap;
+}
+
+h4 {
+  font-size: xx-large;
+}
+
+.card {
+  font-size: x-large;
+  font-weight: bold;
+  width: 500px;
+  height: 700px;
+  border: 2px solid goldenrod;
+  border-radius: 4px;
+  padding: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 10px;
+  box-shadow: 4px 4px 6px 2px darkgrey;
+}
+
+.card button {
+  width: 150px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: goldenrod;
+  color: azure;
+  font-size: large;
+  font-weight: bold;
+  border: none;
+  box-shadow: 4px 4px 6px 2px darkgrey;
+}
+
+.card button:hover {
   background-color: white;
   color: goldenrod;
   border: 2px solid goldenrod;
