--- a/home/style.css
+++ b/home/style.css
@@ -121,7 +121,7 @@ h1 {
 }
 
 /* about */
-.main-container {
+.main-containe {
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -181,10 +181,9 @@ img[alt="about us"] {
 }
 
 /* shop */
-.contaner {
+.contane {
   display: flex;
   flex-wrap: wrap;
-  margin: 30px;
   justify-content: space-around;
   margin: 80px 0;
 }
@@ -232,9 +231,8 @@ div.offa {
 
 div.offb {
   position: absolute;
-  top: 280px;
+  top: 220px;
   left: 250px;
-
   color: white;
   z-index: 50;
 }
@@ -253,7 +251,7 @@ div.offb > button {
 
 div.offc {
   position: absolute;
-  top: 250px;
+  top: 220px;
   left: 10px;
   color: black;
   z-index: 50;
